[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Patrick Arminio", email = "patrick.arminio@gmail.com"},
]
dependencies = [
    "strawberry-graphql>=0.211.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.scripts]
dev = "uvicorn main:app --reload"
